--- a/daily-dose.html
+++ b/daily-dose.html
@@ -38,6 +38,14 @@
       font-size: 1em;
       margin-top: 6px;
     }
+    .daily-quote-bn {
+      margin-top: 14px;
+      color: #1976d2;
+      font-size: 1.05em;
+      text-align: center;
+      font-style: normal;
+      min-height: 36px;
+    }
   </style>
 </head>
 <body>
@@ -47,6 +55,7 @@
       <h3>Motivational Quote</h3>
       <div class="daily-quote" id="daily-quote">Loading quote...</div>
       <div class="daily-author" id="daily-author"></div>
+      <div class="daily-quote-bn" id="daily-quote-bn"></div>
     </div>
     <!-- You can add more daily content sections here if needed -->
   </div>
@@ -64,20 +73,43 @@
     })();
   </script>
   <script>
-    // Fetch a random motivational quote from QuoteSlate API (CORS enabled)
+    // Fetch a random motivational quote from QuoteSlate API (CORS enabled) and translate to Bengali
     document.addEventListener('DOMContentLoaded', () => {
       const quoteElement = document.getElementById('daily-quote');
       const authorElement = document.getElementById('daily-author');
+      const quoteBnElement = document.getElementById('daily-quote-bn');
+
       fetch('https://quoteslate.vercel.app/api/quotes/random')
         .then(response => response.json())
         .then(data => {
-          // API returns: { quote: "...", author: "..." }
-          quoteElement.textContent = `“${data.quote}”`;
-          authorElement.textContent = data.author ? `– ${data.author}` : '';
+          const quote = data.quote;
+          const author = data.author || '';
+          quoteElement.textContent = `“${quote}”`;
+          authorElement.textContent = author ? `– ${author}` : '';
+
+          // Translate to Bengali using LibreTranslate
+          fetch('https://libretranslate.de/translate', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({
+              q: quote,
+              source: 'en',
+              target: 'bn',
+              format: 'text'
+            })
+          })
+          .then(res => res.json())
+          .then(translated => {
+            quoteBnElement.textContent = translated.translatedText;
+          })
+          .catch(() => {
+            quoteBnElement.textContent = 'অনুবাদ লোড করা যায়নি।'; // Could not load translation.
+          });
         })
         .catch(() => {
           quoteElement.textContent = '“Success is not final, failure is not fatal: It is the courage to continue that counts.”';
           authorElement.textContent = '– Winston Churchill';
+          quoteBnElement.textContent = '';
         });
     });
   </script>
