--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Indian Railway Manuals Quiz</title>
 
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <!-- Font Awesome -->
   <link
     rel="stylesheet"
@@ -41,6 +44,41 @@
     #dashboardBtn:hover {
       background: #1565c0;
     }
+    .quiz-list {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      max-width: 400px;
+      margin: 0 auto;
+    }
+    .manual-btn {
+      padding: 12px 18px;
+      font-size: 1.1em;
+      border: none;
+      border-radius: 6px;
+      background: #f8f9fa;
+      color: #333;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.04);
+      transition: background 0.2s, color 0.2s;
+      text-align: left;
+      cursor: pointer;
+    }
+    .manual-btn:hover, .manual-btn:focus {
+      background: #1976d2;
+      color: #fff;
+      outline: none;
+    }
+    .app {
+      margin: 36px auto 0 auto;
+      max-width: 650px;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.07);
+      padding: 36px 28px 28px 28px;
+    }
+    body {
+      background: #f4f6fa;
+    }
   </style>
 </head>
 <body>
@@ -57,7 +95,7 @@
   <!-- Quiz App -->
   <div class="app">
     <div class="quiz-header-row">
-      <h1 style="margin: 0;">Indian Railway Manuals Quiz</h1>
+      <h1 class="mb-0">Indian Railway Manuals Quiz</h1>
       <div id="dashboardBtnContainer">
         <button id="dashboardBtn" type="button">
           <i class="fa fa-user-circle"></i> Dashboard
@@ -81,6 +119,9 @@
   <!-- Firebase compat SDKs -->
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+
+  <!-- Bootstrap JS Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
     // 1) Load and inject header.html with error handling
