--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <!-- Quiz App -->
   <div class="app">
     <div class="quiz-header-row">
-      <h1 class="mb-0">Indian Railway Manuals Quiz</h1>
+      <h1 class="mb-0">IR-LDCE MCQ</h1>
       <div id="dashboardBtnContainer">
         <button id="dashboardBtn" type="button">
           <i class="fa fa-user-circle"></i> Dashboard
