--- a/header.html
+++ b/header.html
@@ -1,9 +1,66 @@
-<header>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="dashboard.html" id="dashboard-link" style="display: none;">Dashboard</a>
-    <a href="login.html" id="login-link">Login</a>
-    <a href="register.html" id="register-link">Register</a>
-    <button id="logout-button" style="display: none;">Logout</button>
+<!-- header.html -->
+<header class="site-header">
+  <!-- Top orange bar -->
+  <div class="bg-warning py-2">
+    <div class="container header-container d-flex justify-content-between align-items-center flex-wrap">
+      <div class="left-group">
+        <a href="index.html" class="text-dark me-3"><i class="fas fa-home"></i> Home</a>
+        <a href="https://indianrail.gov.in" target="_blank" class="text-dark">Railway Official Website</a>
+      </div>
+      <div class="right-group">
+        <a href="about.html" class="text-dark me-3">About Us</a>
+        <a href="register.html" id="registerLink" class="text-dark me-3">Register</a>
+        <a href="login.html" id="loginLink" class="text-dark me-3">Login</a>
+        <button id="logoutButton" class="btn btn-outline-dark btn-sm" style="display:none;">Logout</button>
+      </div>
+      <button class="hamburger navbar-toggler d-lg-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+  </div>
+
+  <!-- White navbar under orange bar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-main">
+    <div class="container header-container">
+      <a class="navbar-brand d-flex align-items-center" href="index.html">
+        <img src="logo.png" alt="IR-LDCE Logo" style="height:48px;max-width:120px;width:auto;object-fit:contain;display:inline-block;" />
+        <span class="ms-2 fw-bold">IR-LDCE</span>
+      </a>
+      <div class="collapse navbar-collapse" id="mainNavbar">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 nav-links">
+          <li class="nav-item">
+            <a class="nav-link" href="categories.html">CATEGORIES</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="daily-dose.html">DAILY DOSE</a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </nav>
 </header>
+
+<!-- Firebase Auth & Logic (place after Bootstrap JS in your main HTML) -->
+<script type="module">
+  import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+  const auth = getAuth();
+  const loginLink = document.getElementById('loginLink');
+  const registerLink = document.getElementById('registerLink');
+  const logoutButton = document.getElementById('logoutButton');
+
+  onAuthStateChanged(auth, (user) => {
+    if (user) {
+      loginLink.style.display = 'none';
+      registerLink.style.display = 'none';
+      logoutButton.style.display = '';
+    } else {
+      loginLink.style.display = '';
+      registerLink.style.display = '';
+      logoutButton.style.display = 'none';
+    }
+  });
+
+  logoutButton.addEventListener('click', () => {
+    signOut(auth);
+  });
+</script>
