--- a/quiz.html
+++ b/quiz.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Quiz</title>
+    <title>Multiple Choice Questions</title>
     <link rel="stylesheet" href="style.css">
     <style>
       .back-dashboard-btn {
@@ -81,7 +81,7 @@
           </div>
         </div>
         <h1>
-            Quiz
+            Multiple Choice questions
             <a href="index.html" class="home-link">Home</a>
             <a href="#" class="back-dashboard-btn" id="backToDashboardBtn" aria-label="Return to Dashboard">&larr; Dashboard</a>
         </h1>
