--- a/quiz.html
+++ b/quiz.html
@@ -62,6 +62,13 @@
         font-size: 0.95em;
         color: #555;
       }
+      #timer {
+        text-align: right;
+        font-size: 1.2em;
+        font-weight: bold;
+        color: #d32f2f;
+        margin-bottom: 10px;
+      }
     </style>
 </head>
 <body>
@@ -81,11 +88,12 @@
           </div>
         </div>
         <h1>
-            Multiple Choice questions
+            Multiple Choice Questions
             <a href="index.html" class="home-link">Home</a>
             <a href="#" class="back-dashboard-btn" id="backToDashboardBtn" aria-label="Return to Dashboard">&larr; Dashboard</a>
         </h1>
         <div class="quiz">
+            <div id="timer"></div>
             <h2 id="question">Question goes here</h2>
             <div id="answer-buttons"></div>
             <button id="next-btn">Next</button>
@@ -112,7 +120,6 @@
       const auth = getAuth(app);
       const db = getFirestore(app);
 
-      // Make Firebase instances available globally for script.js
       window.firebaseApp = app;
       window.firebaseAuth = auth;
       window.firebaseDb = db;
@@ -125,7 +132,6 @@
           document.getElementById('loading').style.display = 'none';
           document.querySelector('.app').style.display = 'block';
 
-          // Fetch user info from Firestore and display in bar
           const userRef = doc(db, "users", user.uid);
           const userSnap = await getDoc(userRef);
           if (userSnap.exists()) {
@@ -136,7 +142,6 @@
             document.getElementById('quizUserInfoBar').style.display = "flex";
           }
 
-          // Initialize quiz after auth confirmation
           if (typeof initQuiz === 'function') {
             initQuiz();
           }
@@ -144,7 +149,7 @@
       });
     </script>
 
-    <!-- Quiz Logic (loaded after auth check) -->
+    <!-- Quiz Logic -->
     <script src="script.js"></script>
 </body>
 </html>
