--- a/quiz.html
+++ b/quiz.html
@@ -1,155 +1,177 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Multiple Choice Questions</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-      .back-dashboard-btn {
-        display: inline-block;
-        margin-left: 16px;
-        padding: 6px 16px;
-        background: #1976d2;
-        color: #fff;
-        border-radius: 4px;
-        text-decoration: none;
-        font-weight: bold;
-        font-size: 1em;
-        transition: background 0.2s;
-      }
-      .back-dashboard-btn:hover {
-        background: #1565c0;
-      }
-      .home-link {
-        margin-left: 16px;
-        font-size: 1em;
-        text-decoration: none;
-        color: #1976d2;
-        font-weight: bold;
-      }
-      .home-link:hover {
-        text-decoration: underline;
-      }
-      #loading {
-        text-align: center;
-        padding: 40px 0;
-        font-size: 1.2em;
-        color: #888;
-      }
-      .user-info-bar {
-        display: flex;
-        align-items: center;
-        gap: 12px;
-        margin-bottom: 20px;
-        background: #f5f7fa;
-        border-radius: 6px;
-        padding: 8px 14px;
-      }
-      .user-info-bar img {
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        object-fit: cover;
-        border: 2px solid #1976d2;
-      }
-      .user-info-bar .user-info-details {
-        display: flex;
-        flex-direction: column;
-      }
-      .user-info-bar .user-info-details .user-name {
-        font-weight: bold;
-      }
-      .user-info-bar .user-info-details .user-email {
-        font-size: 0.95em;
-        color: #555;
-      }
-      #timer {
-        text-align: right;
-        font-size: 1.2em;
-        font-weight: bold;
-        color: #d32f2f;
-        margin-bottom: 10px;
-      }
-    </style>
+  <title>Quiz App</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    .quiz-timer {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      background: conic-gradient(#4caf50 var(--angle, 0deg), #ccc 0deg);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: bold;
+      color: #333;
+      font-size: 1.2em;
+    }
+    #result {
+      font-size: 1.3em;
+      font-weight: bold;
+      margin-top: 20px;
+      color: #1976d2;
+    }
+  </style>
 </head>
 <body>
-    <noscript>
-      <div style="color:#b00; background:#ffe0e0; padding:1em; text-align:center;">
-        This quiz requires JavaScript to function. Please enable JavaScript in your browser.
-      </div>
-    </noscript>
-    <div id="loading">Checking authentication...</div>
-    <div class="app" style="display:none;">
-        <!-- User Info Bar -->
-        <div class="user-info-bar" id="quizUserInfoBar" style="display:none;">
-          <img id="quizUserAvatar" src="default-avatar.png" alt="User Avatar">
-          <div class="user-info-details">
-            <div id="quizUserName" class="user-name"></div>
-            <div id="quizUserEmail" class="user-email"></div>
-          </div>
-        </div>
-        <h1>
-            Multiple Choice Questions
-            <a href="index.html" class="home-link">Home</a>
-            <a href="#" class="back-dashboard-btn" id="backToDashboardBtn" aria-label="Return to Dashboard">&larr; Dashboard</a>
-        </h1>
-        <div class="quiz">
-            <div id="timer"></div>
-            <h2 id="question">Question goes here</h2>
-            <div id="answer-buttons"></div>
-            <button id="next-btn">Next</button>
-        </div>
+  <div id="loading">Checking authentication...</div>
+  <div class="app" style="display:none; position: relative;">
+    <div class="quiz-timer" id="quizTimer">--:--</div>
+
+    <div class="quiz">
+      <h2 id="question">Question will appear here</h2>
+      <div id="answer-buttons"></div>
+      <button id="next-btn">Next</button>
+      <div id="result"></div>
     </div>
+  </div>
 
-    <!-- Firebase Modular SDK -->
-    <script type="module">
-      import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-      import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-      import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+  <!-- Firebase SDK -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+    import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+    import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-      const firebaseConfig = {
-        apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
-        authDomain: "quiz-app-1b48b.firebaseapp.com",
-        projectId: "quiz-app-1b48b",
-        storageBucket: "quiz-app-1b48b.firebasestorage.app",
-        messagingSenderId: "765334603137",
-        appId: "1:765334603137:web:1c8a13f6086a6773c2d480",
-        measurementId: "G-YQJQWJ12N7"
-      };
+    const firebaseConfig = {
+      apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
+      authDomain: "quiz-app-1b48b.firebaseapp.com",
+      projectId: "quiz-app-1b48b",
+      storageBucket: "quiz-app-1b48b.firebasestorage.app",
+      messagingSenderId: "765334603137",
+      appId: "1:765334603137:web:1c8a13f6086a6773c2d480",
+      measurementId: "G-YQJQWJ12N7"
+    };
 
-      const app = initializeApp(firebaseConfig);
-      const auth = getAuth(app);
-      const db = getFirestore(app);
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
+    window.firebaseApp = app;
+    window.firebaseAuth = auth;
+    window.firebaseDb = db;
 
-      window.firebaseApp = app;
-      window.firebaseAuth = auth;
-      window.firebaseDb = db;
+    onAuthStateChanged(auth, async (user) => {
+      if (!user) {
+        const returnUrl = encodeURIComponent(window.location.pathname + window.location.search);
+        window.location.href = `login.html?redirect=${returnUrl}`;
+      } else {
+        document.getElementById('loading').style.display = 'none';
+        document.querySelector('.app').style.display = 'block';
 
-      onAuthStateChanged(auth, async (user) => {
-        if (!user) {
-          const returnUrl = encodeURIComponent(window.location.pathname + window.location.search);
-          window.location.href = `login.html?redirect=${returnUrl}`;
-        } else {
-          document.getElementById('loading').style.display = 'none';
-          document.querySelector('.app').style.display = 'block';
+        const userRef = doc(db, "users", user.uid);
+        const userSnap = await getDoc(userRef);
+        if (userSnap.exists()) {
+          const userData = userSnap.data();
+        }
 
-          const userRef = doc(db, "users", user.uid);
-          const userSnap = await getDoc(userRef);
-          if (userSnap.exists()) {
-            const userData = userSnap.data();
-            document.getElementById('quizUserAvatar').src = userData.avatarUrl || "default-avatar.png";
-            document.getElementById('quizUserName').textContent = userData.username || user.email.split('@')[0];
-            document.getElementById('quizUserEmail').textContent = user.email;
-            document.getElementById('quizUserInfoBar').style.display = "flex";
-          }
+        if (typeof initQuiz === 'function') {
+          initQuiz();
+        }
+      }
+    });
+  </script>
 
-          if (typeof initQuiz === 'function') {
-            initQuiz();
-          }
+  <!-- Main Quiz Logic -->
+  <script>
+    const questions = [
+      {
+        question: "What is the capital of France?",
+        answers: ["Paris", "London", "Berlin", "Madrid"],
+        correct: 0
+      },
+      {
+        question: "2 + 2 = ?",
+        answers: ["3", "4", "5", "2"],
+        correct: 1
+      }
+      // Add more questions as needed
+    ];
+
+    let currentIndex = 0;
+    let score = 0;
+    let quizDuration = 60; // total time in seconds
+    let timerInterval;
+
+    function initQuiz() {
+      showQuestion();
+      startTimer();
+    }
+
+    function showQuestion() {
+      const q = questions[currentIndex];
+      document.getElementById("question").textContent = q.question;
+      const answersDiv = document.getElementById("answer-buttons");
+      answersDiv.innerHTML = "";
+
+      q.answers.forEach((answer, idx) => {
+        const btn = document.createElement("button");
+        btn.textContent = answer;
+        btn.classList.add("answer-btn");
+        btn.onclick = () => selectAnswer(idx);
+        answersDiv.appendChild(btn);
+      });
+    }
+
+    function selectAnswer(selectedIndex) {
+      const q = questions[currentIndex];
+      if (selectedIndex === q.correct) {
+        score += 1;
+      } else {
+        score -= 1 / 3;
+      }
+
+      document.querySelectorAll(".answer-btn").forEach(btn => {
+        btn.disabled = true;
+        if (btn.textContent === q.answers[q.correct]) {
+          btn.style.backgroundColor = "#4caf50";
+        } else if (btn.textContent === q.answers[selectedIndex]) {
+          btn.style.backgroundColor = "#f44336";
         }
       });
-    </script>
+    }
 
-    <!-- Quiz Logic -->
-    <script src="script.js"></script>
+    document.getElementById("next-btn").addEventListener("click", () => {
+      currentIndex++;
+      if (currentIndex < questions.length) {
+        showQuestion();
+      } else {
+        endQuiz();
+      }
+    });
+
+    function startTimer() {
+      let remaining = quizDuration;
+      timerInterval = setInterval(() => {
+        const minutes = String(Math.floor(remaining / 60)).padStart(2, "0");
+        const seconds = String(remaining % 60).padStart(2, "0");
+        document.getElementById("quizTimer").textContent = `${minutes}:${seconds}`;
+        document.getElementById("quizTimer").style.setProperty("--angle", `${(360 * (quizDuration - remaining) / quizDuration)}deg`);
+
+        if (remaining <= 0) {
+          clearInterval(timerInterval);
+          endQuiz();
+        }
+        remaining--;
+      }, 1000);
+    }
+
+    function endQuiz() {
+      clearInterval(timerInterval);
+      document.querySelector(".quiz").innerHTML = `<div id="result">Your Score: ${score.toFixed(2)}</div>`;
+    }
+  </script>
 </body>
 </html>
