--- a/quiz.html
+++ b/quiz.html
@@ -25,6 +25,22 @@
       margin-top: 20px;
       color: #1976d2;
     }
+    .answer-btn {
+      margin: 5px 0;
+      padding: 10px 15px;
+      font-size: 1em;
+      cursor: pointer;
+    }
+    .answer-btn:disabled {
+      cursor: not-allowed;
+      opacity: 0.7;
+    }
+    #next-btn {
+      margin-top: 15px;
+      padding: 10px 20px;
+      font-size: 1em;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -35,7 +51,7 @@
     <div class="quiz">
       <h2 id="question">Question will appear here</h2>
       <div id="answer-buttons"></div>
-      <button id="next-btn">Next</button>
+      <button id="next-btn" disabled>Next</button>
       <div id="result"></div>
     </div>
   </div>
@@ -75,6 +91,7 @@
         const userSnap = await getDoc(userRef);
         if (userSnap.exists()) {
           const userData = userSnap.data();
+          // You can use userData here if needed
         }
 
         if (typeof initQuiz === 'function') {
@@ -86,26 +103,46 @@
 
   <!-- Main Quiz Logic -->
   <script>
-    const questions = [
-      {
-        question: "What is the capital of France?",
-        answers: ["Paris", "London", "Berlin", "Madrid"],
-        correct: 0
-      },
-      {
-        question: "2 + 2 = ?",
-        answers: ["3", "4", "5", "2"],
-        correct: 1
-      }
-      // Add more questions as needed
-    ];
-
+    let questions = [];
     let currentIndex = 0;
     let score = 0;
-    let quizDuration = 60; // total time in seconds
+    let quizDuration = 60; // seconds total quiz time
     let timerInterval;
 
-    function initQuiz() {
+    function getManualFromURL() {
+      const params = new URLSearchParams(window.location.search);
+      return params.get('manual');
+    }
+
+    async function loadQuestions(manual) {
+      if (!manual) {
+        alert('Manual parameter missing in URL!');
+        return [];
+      }
+      try {
+        // Adjust URL if your JSON files are in a different location
+        const url = `https://d2de.github.io/IR-LDCE/${manual}-questions.json`;
+        const response = await fetch(url);
+        if (!response.ok) throw new Error('Failed to load questions JSON');
+        const data = await response.json();
+        return data;
+      } catch (err) {
+        alert('Error loading questions: ' + err.message);
+        return [];
+      }
+    }
+
+    async function initQuiz() {
+      const manual = getManualFromURL();
+      questions = await loadQuestions(manual);
+
+      if (questions.length === 0) {
+        document.querySelector('.quiz').innerHTML = '<p>No questions found for this manual.</p>';
+        return;
+      }
+
+      currentIndex = 0;
+      score = 0;
       showQuestion();
       startTimer();
     }
@@ -120,9 +157,14 @@
         const btn = document.createElement("button");
         btn.textContent = answer;
         btn.classList.add("answer-btn");
+        btn.disabled = false;
+        btn.style.backgroundColor = ""; // reset color
         btn.onclick = () => selectAnswer(idx);
         answersDiv.appendChild(btn);
       });
+
+      document.getElementById("next-btn").disabled = true; // disable Next until answer selected
+      document.getElementById("result").textContent = "";
     }
 
     function selectAnswer(selectedIndex) {
@@ -133,14 +175,16 @@
         score -= 1 / 3;
       }
 
-      document.querySelectorAll(".answer-btn").forEach(btn => {
+      document.querySelectorAll(".answer-btn").forEach((btn, idx) => {
         btn.disabled = true;
-        if (btn.textContent === q.answers[q.correct]) {
-          btn.style.backgroundColor = "#4caf50";
-        } else if (btn.textContent === q.answers[selectedIndex]) {
-          btn.style.backgroundColor = "#f44336";
+        if (idx === q.correct) {
+          btn.style.backgroundColor = "#4caf50"; // green correct
+        } else if (idx === selectedIndex) {
+          btn.style.backgroundColor = "#f44336"; // red wrong
         }
       });
+
+      document.getElementById("next-btn").disabled = false; // enable Next
     }
 
     document.getElementById("next-btn").addEventListener("click", () => {
