--- a/quiz.html
+++ b/quiz.html
@@ -25,24 +25,40 @@
       margin-top: 20px;
       color: #1976d2;
     }
-    .answer-btn {
+    button.answer-btn {
       margin: 5px 0;
-      padding: 10px 15px;
+      padding: 10px;
       width: 100%;
       font-size: 1em;
-      border-radius: 6px;
-      border: 1px solid #ccc;
       cursor: pointer;
-      text-align: left;
-      background-color: #f8f9fa;
-      transition: background-color 0.2s;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      background-color: #f9f9f9;
+      transition: background-color 0.3s ease;
     }
-    .answer-btn:hover:not(:disabled) {
-      background-color: #e0e0e0;
-    }
-    .answer-btn:disabled {
+    button.answer-btn:disabled {
       cursor: default;
-      opacity: 0.7;
+    }
+    button.answer-btn.correct {
+      background-color: #4caf50 !important;
+      color: white;
+      border-color: #4caf50;
+    }
+    button.answer-btn.wrong {
+      background-color: #f44336 !important;
+      color: white;
+      border-color: #f44336;
+    }
+    #next-btn {
+      margin-top: 15px;
+      padding: 10px 20px;
+      font-size: 1.1em;
+      cursor: pointer;
+      border-radius: 5px;
+      border: none;
+      background-color: #1976d2;
+      color: white;
+      display: none; /* initially hidden */
     }
   </style>
 </head>
@@ -54,7 +70,7 @@
     <div class="quiz">
       <h2 id="question">Question will appear here</h2>
       <div id="answer-buttons"></div>
-      <button id="next-btn" disabled>Next</button>
+      <button id="next-btn">Next</button>
       <div id="result"></div>
     </div>
   </div>
@@ -94,7 +110,6 @@
         const userSnap = await getDoc(userRef);
         if (userSnap.exists()) {
           const userData = userSnap.data();
-          // you can use userData if needed
         }
 
         if (typeof initQuiz === 'function') {
@@ -106,7 +121,7 @@
 
   <!-- Main Quiz Logic -->
   <script>
-    // Updated questions with your JSON format
+    // Example question data format matching your JSON:
     const questions = [
       {
         question: "Which is the largest animal in the world?",
@@ -126,65 +141,67 @@
           { text: "Africa", correct: false }
         ]
       }
-      // Add more questions here...
+      // Add more questions as needed
     ];
 
     let currentIndex = 0;
     let score = 0;
-    let quizDuration = 60; // total time in seconds
+    const quizDuration = 60; // total time in seconds
     let timerInterval;
 
+    const questionElem = document.getElementById("question");
+    const answersDiv = document.getElementById("answer-buttons");
+    const nextBtn = document.getElementById("next-btn");
+    const quizTimer = document.getElementById("quizTimer");
+
     function initQuiz() {
+      currentIndex = 0;
+      score = 0;
+      nextBtn.style.display = 'none';
       showQuestion();
       startTimer();
     }
 
     function showQuestion() {
+      nextBtn.style.display = 'none';
       const q = questions[currentIndex];
-      document.getElementById("question").textContent = q.question;
-      const answersDiv = document.getElementById("answer-buttons");
+      questionElem.textContent = q.question;
       answersDiv.innerHTML = "";
 
       q.answers.forEach((answer, idx) => {
         const btn = document.createElement("button");
         btn.textContent = answer.text;
         btn.classList.add("answer-btn");
-        btn.disabled = false;
-        btn.style.backgroundColor = "";
-        btn.onclick = () => selectAnswer(idx);
+        btn.onclick = () => selectAnswer(btn, answer.correct);
         answersDiv.appendChild(btn);
       });
-
-      document.getElementById("next-btn").disabled = true;
-      document.getElementById("result").textContent = "";
     }
 
-    function selectAnswer(selectedIndex) {
+    function selectAnswer(selectedBtn, isCorrect) {
       const q = questions[currentIndex];
 
-      // Disable all buttons
-      document.querySelectorAll(".answer-btn").forEach((btn, idx) => {
-        btn.disabled = true;
+      // Disable all buttons after selection
+      const allBtns = answersDiv.querySelectorAll('button');
+      allBtns.forEach(btn => btn.disabled = true);
 
-        if (q.answers[idx].correct) {
-          btn.style.backgroundColor = "#4caf50";  // green correct
-        } else if (idx === selectedIndex) {
-          btn.style.backgroundColor = "#f44336";  // red wrong selected
-        }
-      });
-
-      // Score calculation
-      if (q.answers[selectedIndex].correct) {
+      if (isCorrect) {
         score += 1;
+        selectedBtn.classList.add('correct');
       } else {
-        score -= 1/3;
+        score -= 1 / 3;
+        selectedBtn.classList.add('wrong');
+        // Highlight correct answer
+        allBtns.forEach(btn => {
+          if (btn.textContent === q.answers.find(a => a.correct).text) {
+            btn.classList.add('correct');
+          }
+        });
       }
 
-      // Enable next button after answer selection
-      document.getElementById("next-btn").disabled = false;
+      nextBtn.style.display = 'inline-block';
     }
 
-    document.getElementById("next-btn").addEventListener("click", () => {
+    nextBtn.addEventListener("click", () => {
       currentIndex++;
       if (currentIndex < questions.length) {
         showQuestion();
@@ -198,8 +215,8 @@
       timerInterval = setInterval(() => {
         const minutes = String(Math.floor(remaining / 60)).padStart(2, "0");
         const seconds = String(remaining % 60).padStart(2, "0");
-        document.getElementById("quizTimer").textContent = `${minutes}:${seconds}`;
-        document.getElementById("quizTimer").style.setProperty("--angle", `${(360 * (quizDuration - remaining) / quizDuration)}deg`);
+        quizTimer.textContent = `${minutes}:${seconds}`;
+        quizTimer.style.setProperty("--angle", `${(360 * (quizDuration - remaining) / quizDuration)}deg`);
 
         if (remaining <= 0) {
           clearInterval(timerInterval);
@@ -211,7 +228,20 @@
 
     function endQuiz() {
       clearInterval(timerInterval);
-      document.querySelector(".quiz").innerHTML = `<div id="result">Your Score: ${score.toFixed(2)}</div>`;
+      const quizDiv = document.querySelector(".quiz");
+      quizDiv.innerHTML = `
+        <div id="result">Your Score: ${score.toFixed(2)}</div>
+        <button id="home-btn" style="margin: 10px; padding: 10px 20px;">Home</button>
+        <button id="dashboard-btn" style="margin: 10px; padding: 10px 20px;">Dashboard</button>
+      `;
+
+      document.getElementById('home-btn').addEventListener('click', () => {
+        window.location.href = 'index.html'; // Adjust to your home URL
+      });
+      
+      document.getElementById('dashboard-btn').addEventListener('click', () => {
+        window.location.href = 'dashboard.html'; // Adjust to your dashboard URL
+      });
     }
   </script>
 </body>
