--- a/login.html
+++ b/login.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Login - Quiz App</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
   <style>
     body {
       background: #f5f7fa;
@@ -32,7 +32,6 @@
       margin-bottom: 4px;
     }
     .login-container input[type="email"],
-    .login-container input[type="text"],
     .login-container input[type="password"] {
       padding: 10px;
       border: 1px solid #ccc;
@@ -115,8 +114,7 @@
       margin: 0 8px;
     }
   </style>
-  <!-- Font Awesome for Google icon -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
 <body>
   <noscript>
@@ -124,6 +122,7 @@
       This page requires JavaScript to function. Please enable JavaScript in your browser.
     </div>
   </noscript>
+
   <div class="login-container">
     <h2>Login to Quiz App</h2>
     <div id="error-message" class="error-message"></div>
@@ -133,22 +132,21 @@
     <div class="or-divider">or</div>
     <form id="loginForm" autocomplete="on">
       <label for="email">Email</label>
-      <input type="email" id="email" required placeholder="Enter your email" autocomplete="username">
+      <input type="email" id="email" name="email" required placeholder="Enter your email" autocomplete="username" />
       <label for="password">Password</label>
-      <input type="password" id="password" required placeholder="Enter your password" autocomplete="current-password">
+      <input type="password" id="password" name="password" required placeholder="Enter your password" autocomplete="current-password" />
       <button type="submit">Login</button>
     </form>
     <div class="signup-link">
       Don't have an account? <a href="register.html">Sign up</a>
     </div>
   </div>
-  <!-- Firebase logic for Google sign-in -->
+
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
     import { getAuth, signInWithEmailAndPassword, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
     import { getFirestore, doc, setDoc, getDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-    // Your Firebase config
     const firebaseConfig = {
       apiKey: "AIzaSyCRhKq7k4v2MdiE5xT4H7-Yb7SLQ5mvTn8",
       authDomain: "quiz-app-1b48b.firebaseapp.com",
@@ -158,6 +156,7 @@
       appId: "1:765334603137:web:1c8a13f6086a6773c2d480",
       measurementId: "G-YQJQWJ12N7"
     };
+
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
@@ -172,8 +171,8 @@
       try {
         await signInWithEmailAndPassword(auth, email, password);
         window.location.href = "dashboard.html";
-      } catch (err) {
-        errorDiv.textContent = err.message;
+      } catch (error) {
+        errorDiv.textContent = error.message;
         errorDiv.style.display = "block";
       }
     });
@@ -181,31 +180,24 @@
     // Google sign-in
     document.getElementById('googleBtn').addEventListener('click', async () => {
       const provider = new GoogleAuthProvider();
-      provider.setCustomParameters({ prompt: "select_account" }); // Always show account picker
       const errorDiv = document.getElementById('error-message');
       errorDiv.style.display = "none";
       try {
         const result = await signInWithPopup(auth, provider);
         const user = result.user;
-        // Check if Firestore user doc exists, create if not
-        const userDoc = doc(db, "users", user.uid);
-        const userSnap = await getDoc(userDoc);
-        if (!userSnap.exists()) {
-          // Prompt for gender for avatar (optional, or default to male)
-          let gender = prompt("Choose avatar gender: male or female", "male");
-          gender = (gender && gender.toLowerCase() === "female") ? "female" : "male";
-          const avatarUrl = `https://xsgames.co/randomusers/avatar.php?g=${gender}`;
-          const username = user.displayName ? user.displayName : user.email.split('@')[0];
-          await setDoc(userDoc, {
+        // Save user data in Firestore (if new user)
+        const userRef = doc(db, "users", user.uid);
+        const docSnap = await getDoc(userRef);
+        if (!docSnap.exists()) {
+          await setDoc(userRef, {
             email: user.email,
-            username: username,
+            name: user.displayName || '',
             createdAt: serverTimestamp(),
-            avatarUrl: avatarUrl
           });
         }
         window.location.href = "dashboard.html";
-      } catch (err) {
-        errorDiv.textContent = "Google Sign-In failed: " + err.message;
+      } catch (error) {
+        errorDiv.textContent = error.message;
         errorDiv.style.display = "block";
       }
     });
